# newsletter-rs

./: .dockerignore  Cargo.toml  README.md  configuration.yml
.cargo/: config.toml
configuration/: base.yml  local.yml  production.yml
migrations/: 20230501185253_create_subscriptions_table.sql  20230517013615_make_status_mandatory_on_subscriptions.sql  20230517013940_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
