[package]
name = "newsletter_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version =  "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3.1"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"
fake = "~2.3"
reqwest = { version = "0.11", default-features = false, features = ["json",
  "rustls-tls"]}
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
actix-files = "0.6.2"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres", 
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
rand = "0.8.5"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_rs"
